examples/components/error/error-message-file-input.njk
<div class="form-group file-input form-error">
  <label class="form-label" for="form-fileinput-error">Vedhæft fil</label>
  <span class="form-error-message mb-3" id="fileinput-error"><span class="sr-only">Fejl:</span> Filens størrelse skal være under 2MB</span>
  <input type="file" id="form-fileinput-error" name="file" aria-describedby="fileinput-error">
</div>
